cabal-version: 2.2
name: lumberjack
version: 0.1.0.0
synopsis: Lumberjack serialization
-- description:
bug-reports: https://github.com/byteverse/lumberjack
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2020 Andrew Martin
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  exposed-modules:
    Lumberjack.Reader
  build-depends:
    , base >=4.12 && <5
    , byteslice >=0.2.1 && <0.3
    , bytesmith >=0.3.3 && <0.4
    , byte-order >=0.1.2 && <0.2
    , primitive >=0.7 && <0.8
    , array-builder >=0.1 && <0.2
    , array-chunks >=0.1.1 && <0.2
    , sockets
    , zlib-bytes >=0.1 && <0.2
